DigicielFull/force-app/main/default/objects/UserLicense__c/UserLicense__c.object-meta.xml
<CustomObject>
    <label>User License</label>
    <nameField>
        <displayFormat>ULS-{00000}</displayFormat>
        <label>User License Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Licenses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>