DigicielFull/force-app/main/default/objects/UserLicense__c/fields/CompanyUserDefined__c.field-meta.xml
<CustomField>
    <fullName>CompanyUserDefined__c</fullName>
    <label>Company (User Defined)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>