DigicielFull/force-app/main/default/objects/UserLicense__c/fields/DelegatedApprover__c.field-meta.xml
<CustomField>
    <fullName>DelegatedApprover__c</fullName>
    <label>Delegated Approver</label>
    <length>200</length>
    <type>Text</type>
</CustomField>