DigicielFull/force-app/main/default/objects/UserLicense__c/fields/DigicelCompanyRole__c.field-meta.xml
<CustomField>
    <fullName>DigicelCompanyRole__c</fullName>
    <label>Digicel Company Role</label>
    <length>200</length>
    <type>Text</type>
</CustomField>