DigicielFull/force-app/main/default/objects/UserLicense__c/fields/DivisionUserDefined__c.field-meta.xml
<CustomField>
    <fullName>DivisionUserDefined__c</fullName>
    <label>Division (User Defined)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>