DigicielFull/force-app/main/default/objects/UserLicense__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <label>Full Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>