DigicielFull/force-app/main/default/objects/UserLicense__c/fields/ManagerLookup__c.field-meta.xml
<CustomField>
    <fullName>ManagerLookup__c</fullName>
    <label>Manager (Lookup)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>