DigicielFull/force-app/main/default/objects/UserLicense__c/fields/MarketName__c.field-meta.xml
<CustomField>
    <fullName>MarketName__c</fullName>
    <label>Market Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>