DigicielFull/force-app/main/default/objects/UserLicense__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>